Added ability to view profile and fixed problems regarding storing cookies properly when logging in, aslo tidyed some route stuff

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -3,6 +3,7 @@
     "home": "Home",
     "jobRoles": "Job Roles",
     "login": "Login",
+    "profile": "Profile",
     "menu": "Menu",
     "openMenu": "Open navigation menu",
     "toggleTheme": "Toggle dark mode",
