--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -3,6 +3,7 @@
     "home": "Inicio",
     "jobRoles": "Roles de Trabajo",
     "login": "Iniciar Sesión",
+    "profile": "Perfil",
     "menu": "Menú",
     "openMenu": "Abrir menú de navegación",
     "toggleTheme": "Alternar modo oscuro",
